# Bouncing-Ball-Game

./: .gitignore  Bouncing-Crusher.cabal  CHANGELOG.md  README.md  gloss-template.cabal  level1
app/: Consts.hs  DevUtils.hs  Game.hs  Main.hs  MapEditor.hs  MathUtils.hs  Render.hs  Sounds.hs  TextSizeAnalysis.hs  Types.hs
docs/: Consts.html  DevUtils.html  Game.html  Main.html  MathUtils.html  Types.html  doc-index.html
haddock/: Bouncing-Crusher.haddock  MapEditor.html  Render.html  Sounds.html  TextSizeAnalysis.html  index.html
levels/: level0  level1  level10  level2  level3  level4  level5  level6  level7  level8  level9
sprites/: cannon.aseprite
