cabal-version:      2.4
name:               gloss-template
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Dirakon
maintainer:         609700zxc@mail.ru

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable gloss-template
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:
    other-modules:
      MapEditor
      Types
      Consts
      MathUtils
      Game
      TextSizeAnalysis
      Sounds
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4,sdl2,sdl2-mixer, gloss, gloss-juicy, bytestring, binary, directory, GLUT, data-default-class
    hs-source-dirs:   app
    default-language: Haskell2010
